--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="dark"> <!-- Start in dark mode by default -->
+<html lang="en" class="dark"> <!-- default dark mode -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vishal Verma — Full Stack Developer</title>
+    <title>Vishal Verma — Web Developer</title>
+    <link rel="icon" type="image/png" href="icons8-portfolio-48.png">
+
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
-    <!-- Your Custom CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -186,7 +188,7 @@
         </div>
     </footer>
 
-    <!-- Your Custom JavaScript -->
+    <!--  Custom JavaScript -->
     <script src="script.js"></script>
 
 </body>
