added some stuffs

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
     </footer>
 
-    <!--  Custom JavaScript -->
+    <!-- JavaScript -->
     <script src="script.js"></script>
 
 </body>
