--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                  <div class="grid grid-cols-1 md:grid-cols-3 gap-12 items-center">
                     <div class="md-col-span-1 about-image">
                         <div class="aspect-square rounded-xl overflow-hidden">
-                           <img src="profile pi.png" alt="Portrait of Vishal Verma" class="w-full h-full object-cover">
+                           <img src="profile pic.png" alt="Portrait of Vishal Verma" class="w-full h-full object-cover">
                         </div>
                     </div>
                     <div class="md:col-span-2 about-text">
