--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <span class="text-lg font-semibold">CSS</span>
                                 <span class="text-lg font-semibold">JavaScript</span>
                                 <span class="text-lg font-semibold">React.js</span>
-                                <span class="text-lg font-semibold">Node.js</span>
+                                <span class="text-lg font-semibold">NodeJS</span>
                                 <span class="text-lg font-semibold">Fetch API</span>
                                 <span class="text-lg font-semibold">Tailwind CSS</span>
                                 <span class="text-lg font-semibold">C++</span>
