--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <span class="text-lg font-semibold">HTML</span>
                                 <span class="text-lg font-semibold">CSS</span>
                                 <span class="text-lg font-semibold">JavaScript</span>
-                                <span class="text-lg font-semibold">React.js</span>
+                                <span class="text-lg font-semibold">ReactJS</span>
                                 <span class="text-lg font-semibold">NodeJS</span>
                                 <span class="text-lg font-semibold">Fetch API</span>
                                 <span class="text-lg font-semibold">Tailwind CSS</span>
